--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,8 @@
-# Database Configuration
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=model_monitor
-DB_PASSWORD=your_postgresql_password_here
+DB_PASSWORD=HejOliver
 DB_PORT=5432
-
-# JWT Secret (generate a random string for production)
-JWT_SECRET=your-super-secret-jwt-key-here
-
-# Server Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-123456789
 PORT=5000
 NODE_ENV=development
